# opencode-agents

./: AGENTS.md  DevPrompt.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/superpowers/plans/: 2026-05-11-oca-tool.md  2026-05-12-dynamic-model-config.md  2026-05-12-oca-tool-uninstall.md
docs/superpowers/specs/: 2026-05-11-oca-tool-design.md  2026-05-12-dynamic-model-config-design.md  2026-05-12-oca-tool-uninstall-design.md
src/oca_tool/: __init__.py  __main__.py  cli.py  installer.py  uninstaller.py
src/oca_tool/templates/default/: pyproject.toml  system-deps.conf
src/oca_tool/templates/office/: agent-package.json  agent-pyproject.toml  opencode.json
src/oca_tool/templates/research/: agent-pyproject.toml  opencode.json  skills-lock.json  system-deps.conf
src/oca_tool/templates/research/agents/: web-search.md
tests/: test_installer.py  test_uninstaller.py
