[project]
name = "oca-tool"
version = "0.1.0"
description = "基于 opencode 的 agent 环境搭建工具"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
oca-tool = "oca_tool.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oca_tool"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
